--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.19",
+    "@mui/x-data-grid": "^7.6.1",
+    "@mui/x-date-pickers": "^7.6.1",
     "@svgr/plugin-svgo": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,13 +16,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "css-select": "^5.1.0",
+    "date-fns": "^3.6.0",
     "gh-pages": "^6.1.1",
+    "igniteui-react": "^18.6.0",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
+    "recoil": "^0.7.7",
     "resolve-url-loader": "^5.0.0",
     "svgo": "^3.3.0",
     "web-vitals": "^2.1.4"
@@ -44,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
