--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,14 @@ jobs:
         working-directory: ./front
 
       - name: Deploy to GitHub Pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add ./front/build
+          git clone --depth 1 --branch gh-pages https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} out
+          rsync -av --delete ./front/build/ out/
+          cd out
+          git add -A
           git commit -m "Deploy to GitHub Pages"
-          git push -f https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} gh-pages
+          git push origin gh-pages
