--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,14 @@ jobs:
       - name: Deploy to GitHub Pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git clone --depth 1 --branch gh-pages https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} out
-          rsync -av --delete ./front/build/ out/
+          git clone --depth 1 https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} out
           cd out
+          git checkout -b gh-pages || git checkout gh-pages
+          rsync -av --delete ../front/build/ ./
           git add -A
           git commit -m "Deploy to GitHub Pages"
           git push origin gh-pages
