--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,6 @@
     "axios": "^1.6.8",
     "css-select": "^5.1.0",
     "date-fns": "^3.6.0",
-    "gh-pages": "^6.1.1",
     "igniteui-react": "^18.6.0",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.38",
@@ -56,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.1.1"
   }
 }
